# huesyncbox

./: .gitignore  LICENSE  README.md  __init__.py  bump_aiohuesyncbox_version.sh  bump_min_ha_version.sh  config_flow.py  const.py  coverage.sh  hacs.json  huesyncbox.py  make_release.sh  media_player.py  pyproject.toml  release.py  release_checks.sh  requirements.test.txt  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: push.yaml  release.yaml
custom_components/huesyncbox/: __init__.py  config_flow.py  const.py  coordinator.py  device_action.py  device_condition.py  device_trigger.py  diagnostics.py  errors.py  helpers.py  huesyncbox.py  icons.json  manifest.json  media_player.py  number.py  repairs.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/huesyncbox/translations/: de.json  en.json  es.json  fr.json  nb.json  nl.json  pl.json
tests/: __init__.py  conftest.py  helpers.py  test_config_flow.py  test_coordinator.py  test_device_condition.py  test_device_trigger.py  test_diagnostics.py  test_helpers.py  test_huesyncbox.py  test_init.py  test_media_player.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
translations/: en.json
